@@ -14,7 +14,7 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 2429fa84049d086fbde7b56301bee9aa020aa5f5 ChangeLog
+SHA1 a216d641c93caacd7d8e6e740d610c45927c246f ChangeLog
 SHA1 d7f05f3c29deb4f29dd9291d5076899b3f92cd20 FIGlet_fonts/3-d.flf
 SHA1 8238eb029ef0be3083cd5982100b4000bd8aacb8 FIGlet_fonts/4x4_offr.flf
 SHA1 f3223bb52e36d14098e1ed1f7790593a09230d68 FIGlet_fonts/5lineoblique.flf
@@ -92,9 +92,9 @@ SHA1 5939c33dff38893a1dcf0ba68b97845f7c63e1fa FIGlet_fonts/wavy.flf
 SHA1 f81af8fd43e0f19c168343709749ef4da3972e6d FIGlet_fonts/weird.flf
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 3969a1b82753ea591ce1b77ed0ccf1403b480052 MANIFEST
-SHA1 ea6f73b640339a544fde1e323492c7bd679bb409 META.yml
-SHA1 06e1ddfd879090e5afd86b632cfd712570b2a6ca Makefile.PL
-SHA1 e64a91525f8949658856accaab34e30981856479 README
+SHA1 4a7b52671e38a334f6765fc36a868f56b889861b META.yml
+SHA1 aeda6a923998c686b0fb93ac593f1facf379c750 Makefile.PL
+SHA1 7a59a87222485f6c0e7026b30c8195c47823b3b5 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 ade875b98aca4971a381d2e037ed009b52c2f8da bin/fullauto.pl
 SHA1 967864161cdddec872e6ea5fc18c37776cb1641a bin/install_mozrepl_plugin.exe
@@ -122,7 +122,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 f7446b77903675c02666bb5fc1a4d50cf7685130 lib/Net/FullAuto.pm
+SHA1 4fab1a1508bd0e1f338ab0a760a19384367b540e lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -139,11 +139,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJUCy6MAAoJEBa/9Pad787EUwQH/irS8Q9beaXWx1DHAxy+o87r
-r34WW+Ie+CJ+fz/Y3vlJfqqB2zvMem+G68tT2eVbSkhBKKUUxvxkpnrFO8dAEkj6
-x1x3l4yRTP3zT/LMsJJoXLFCUHTpIA6ykMj6I8aHxPQeN1dSF2xmkv8biS+D74HV
-e5jCBoymym5RjuLoGYYSpngYru/WUYPC8kgYidCHv86ejxJqgMyUfVYsoT1M16eh
-q8naNp3v4o1usqyEz2EkSKSPSMbYqXZiPoHR3GgsSIfZs7DbkxbOUvKseRcdeuNn
-nNKaTY30S+DGHhpNR7BHrK/hqTb0Ff+9otL68AWpQY1oXeXJQchMg2DZ2td6CRA=
-=iRdd
+iQEcBAEBAgAGBQJUC3CTAAoJEBa/9Pad787E9M0IAMrSP/8m6qmL9jqDIMYCCpIQ
+p1UcM+wuozmXF+8KcnBuL6SDMaK/S5Iympwd2K9B89XW/lG0LeLnaTwOgUH7NeuH
+V14xh7tnUx+MdoklnVAg0fQVhRlMvSUq5HwUlZVLRoTAT7VaZiuQBb2AIIjMvEc1
+1SCdvxcW/atE2xzHEdPODaIHZLwNLd/5Sv9xZwJ9n4d6E2iUNnnpqdKNPSHXNAp2
+QkML6ZtUZcR/xkqPxr8UL5Rb8U4lSgQp0M+VkZHNKa6WUp6mPz0ppYDl/XEXiueh
+nU1aBHHgrug2pftGFwL4+OxIVbnmMrcA7W7PR2WfqslxaJEWajw3DDfsALucWNY=
+=/6a+
 -----END PGP SIGNATURE-----
