@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.999999999905';
+our $VERSION='0.999999999906';
 
 
 use 5.005;
